fix html bad element

--- a/localStorage.html
+++ b/localStorage.html
@@ -21,7 +21,7 @@
 	
 	<p id="demoUserData">User Info</p>
 	
-	<button onclick="createUser()" type="button" style="background-color: black; color: white">Click here to store the user data</button>
+	<button onclick="createUser()" type="button" style="background-color: black; color: white;">Click here to store the user data</button>
 
 	<hr>
 	<p> For example, we can track how many times a person clicks on the red button vs the blue button. And return that after closing and opening the web browser.</p>
@@ -29,13 +29,13 @@
 	<p>Because I am lazy, lets just count by pulling the last click count from the localStorage and adding it to it, then setting local storage again.</p>
 
 	<div>
-		<p><button onclick="clickBlueButton()" type="button" style="background-color: blue; color: white">Click me!</button>
+		<p><button onclick="clickBlueButton()" type="button" style="background-color: blue; color: white;">Click me!</button>
 		</p>
 		<p id="blue"></p>
 	</div>
 	
 	<div>
-		<p><button onclick="clickRedButton()" type="button" style="background-color: red; color: white">Click me!</button>
+		<p><button onclick="clickRedButton()" type="button" style="background-color: red; color: white;">Click me!</button>
 		</p>
 		<p id="red"></p>
 	</div>
@@ -46,7 +46,7 @@
 	<p>You could store data any time in live code, but for our example, push the button and it will start the process of storing your User data to local storage</p>
 
 	<div>
-		<p><button onclick="storeData()" type="button" style="background-color: black; color: white">Store your stuff!</button>
+		<p><button onclick="storeData()" type="button" style="background-color: black; color: white;">Store your stuff!</button>
 		</p>
 		<p id="store"></p>
 
@@ -55,7 +55,7 @@
 	<h1>Close the browser and now once you open it again, click to retrieve the data from local storage</h1>
 
 	<div>
-		<p><button onclick="retrieveData()" type="button" style="background-color: orange; color: white">Retrieve your stuff!</button>
+		<p><button onclick="retrieveData()" type="button" style="background-color: orange; color: white;">Retrieve your stuff!</button>
 		</p>
 		<p id="retrieve"></p>
 
@@ -67,7 +67,7 @@
 	<p
 
 	<div>
-		<p><button onclick=“removeData()” type="button" style="background-color: orange; color: white">Remove your data!</button>
+		<p><button onclick=“removeData()” type="button" style="background-color: orange; color: white;">Remove your data!</button>
 		</p>
 		<p id="remove1"></p>
 		<hr>
@@ -79,7 +79,7 @@
 		<hr>
 		<p>Takes too long to remove it one by one, lets clear it all</p>
 		<p id="clear"></p>
-	</div style="border-bottom: 800px">
+	</div style="margin-bottom: 800px;">
 
 	
 </body>
