mv style inline

--- a/localStorage.html
+++ b/localStorage.html
@@ -66,7 +66,7 @@
 	<h1>REMOVE ITEMS FROM LOCAL STORAGE</h1>
 	
 
-	<div>
+	<div style="margin-bottom: 800px;">
 		<p><button onclick=“removeData()” type="button" style="background-color: orange; color: white;">Remove your data!</button>
 		</p>
 		<p id="remove1"></p>
@@ -79,7 +79,7 @@
 		<hr>
 		<p>Takes too long to remove it one by one, lets clear it all</p>
 		<p id="clear"></p>
-	</div style="margin-bottom: 800px;">
+	</div >
 
 	
 </body>
