--- a/localStorage.html
+++ b/localStorage.html
@@ -9,7 +9,7 @@
 <hr>
 	<p>Let's start the demo by creating a user to store some info about</p>
 <div id="input">
-		<p><h3>INPUT USER DATA</h3></p>
+		<h3>INPUT USER DATA</h3>
 		<form id="form">
 			First Name: <input type="text" name="fName" id="fName">
 			Last Name: <input type="text" name="lName" id="lName">
@@ -66,8 +66,9 @@
 	<h1>REMOVE ITEMS FROM LOCAL STORAGE</h1>
 	
 
-	<div style="margin-bottom: 800px;">
-		<p><button onclick=“removeData()” type="button" style="background-color: orange; color: white;">Remove your data!</button>
+	<div style="margin-bottom: 300px;">
+		<p><button onclick=“removeData()” type="button" style="background-color: orange; color: white;">Remove your data!
+			</button>
 		</p>
 		<p id="remove1"></p>
 		<hr>
