add Remove items on html

--- a/localStorage.html
+++ b/localStorage.html
@@ -63,7 +63,13 @@
 
 	<hr>
 	
-	
+	<h1>REMOVE ITEMS FROM LOCAL STORAGE</h1>
+
+	<div style="margin-bottom: 300px;">
+		<p><button onclick="removeData()" type="button" style="background-color: yellow; color: black;">remove your stuff!</button>
+		</p>
+		<p id="remove"></p>
+	</div>
 
 	
 </body>
