--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
 			<tbody>
 				<tr>
 					<td><a href="basicJavaScript.html">Basic JavaScript</a></td>
-					<td></td>
-					<td></td>
+					<td><p>October 6, 2018</p></td>
+					<td><p>Passed Profiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="javaScriptObjects.html">JavaScript Objects</a></td>
-					<td></td>
-					<td></td>
+					<td><p>October 6, 2018</p></td>
+					<td><p>Passed Profiency</p></td>
 				</tr>
 				<tr>
-					<td><a href="json.html">JSON</a></td>
-					<td></td>
-					<td></td>
+					<td><a href="localStorage.html">JSON</a></td>
+					<td><p>October 11, 2018</p></td>
+					<td><p>Submitting project with both localStorage and JSON demo</p></td>
 				</tr>
 				<tr>
 					<td><a href="localStorage.html">Local Storage</a></td>
-					<td></td>
-					<td></td>
+					<td><p>October 11, 2018</p></td>
+					<td><p>Submitting project with both localStorage and JSON demo</p></td>
 				</tr>
 				<tr>
 					<td><a href="dom.html">DOM</a></td>
-					<td></td>
-					<td></td>
+					<td><p>October 6, 2018</p></td>
+					<td><p>Passed Profiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="css3Transitions.html">CSS3 Transitions</a></td>
