--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 				<tr>
 					<td><a href="localStorage.html">JSON</a></td>
 					<td><p>October 11, 2018</p></td>
-					<td><p>Submitting project with both localStorage and JSON demo</p></td>
+					<td><p>Passed Profiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="localStorage.html">Local Storage</a></td>
 					<td><p>October 11, 2018</p></td>
-					<td><p>Submitting project with both localStorage and JSON demo</p></td>
+					<td><p>Passed Profiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="dom.html">DOM</a></td>
