--- a/ajax.html
+++ b/ajax.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>AJAX FLUENCY </title>
+	<script src="ajax.js"></script>
+</head>
 <body>
-
-<h1>AJAX</h1>
-
-
+	<header>
+		<h1>View the Solar System Day by Day </h1>
+	</header>
+	<img src="https://apod.nasa.gov/apod/image/1810/M015-2_Hubl1024.jpg">
 
 </body>
 </html>
