change background color

--- a/ajax.html
+++ b/ajax.html
@@ -5,7 +5,7 @@
 	<script src="ajax.js"></script>
 	<style>
 	body {
-		background-color: navy-blue;
+		background-color: #003366;
 		color: white;
 		text-align: center;
 	}
@@ -44,7 +44,7 @@
 					var imgOfDay = nasaObject.url;
 					var title = nasaObject.title;
 					var description = nasaObject.explanation;
-					//var date = document.getElementById("input").value;
+					var date = document.getElementById("input").value;
 
 					//call method to display the image
 					displayImage(imgOfDay, title, description);
