--- a/ajax.html
+++ b/ajax.html
@@ -27,6 +27,7 @@
 	<div id="userInput">
 		Date: <input type="text" id="input" value="YYYY-MM-DD">
 		<button onclick="loadImage()">Click to see the image</button>
+		<p id="error"></p>
 		<br>
 		<br>
 		<br>
@@ -45,6 +46,13 @@
 					var title = nasaObject.title;
 					var description = nasaObject.explanation;
 					var date = document.getElementById("input").value;
+					var regex = RegExp('/\d{4}\-\d+\-\d+/g');
+						if (regex.test(date) ) {
+							url += "&date=" + date;
+						}
+						else {
+							document.getElementById("error").innerHTML = "Your date doesn't match the format YYYY-MM-DD, but we will show you today's image";
+						}
 
 					//call method to display the image
 					displayImage(imgOfDay, title, description);
