--- a/ajax.html
+++ b/ajax.html
@@ -49,6 +49,7 @@
 					var regex = RegExp('/\d{4}\-\d+\-\d+/g');
 						//if (regex.test(date) ) {
 							url += "&date=" + date;
+							console.log(url);
 							/*
 						}
 						else {
