--- a/ajax.html
+++ b/ajax.html
@@ -50,6 +50,8 @@
 						//if (regex.test(date) ) {
 							url += "&date=" + date;
 							console.log(imgOfDay);
+							console.log(url);
+							console.log(date);
 							/*
 						}
 						else {
