testing ajax return

--- a/ajax.html
+++ b/ajax.html
@@ -49,6 +49,7 @@
 					url += "&date=" + date;
 
 					var imgOfDay = nasaObject.url;
+					console.log(nasaObject);
 					console.log(imgOfDay);
 					console.log(url);
 					console.log(date);
