--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 				</tr>
 				<tr>
 					<td><a href="ajax.html">AJAX</a></td>
-					<td></td>
-					<td></td>
+					<td>October 17, 2018</td>
+					<td>Submitted</td>
 				</tr>
 				<tr>
 					<td><a href="javaScriptEvents.html">JavaScript Events</a></td>
