update with src file

--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>CSS3 Transitions, Animations, Transformations</title>
+	<script src="css3.js"></script>
 	<style>
 	#wand {
 		margin: auto;
