--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -4,7 +4,7 @@
 	<title>CSS3 Transitions, Animations, Transformations</title>
 	<script src="css3.js"></script>
 	<style>
-	#wand {
+	.wand {
 		margin: auto;
     	margin-top: 200px;
 		background-color: brown;
@@ -21,8 +21,8 @@
 		<button id="translate" type="button" onclick="setTranslate()">Transport</button>
 
 	</div>
-	<p id="spellName">
-	<div id="wand" onClick="castSpell('#spellName')"></div>
+	<input id="spellName" value=" ">
+	<div id="wand"  onClick="castSpell(document.getElementById('spellName'.value))"></div>
 
 </body>
 </html>
