--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -22,7 +22,7 @@
 
 	</div>
 	<input id="spellName" value="test">
-	<div id="wand"  onClick="castSpell(document.getElementById('spellName'.value))"></div>
+	<div id="wand"  onClick="castSpell(document.getElementById('spellName').value)"></div>
 
 </body>
 </html>
