--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -11,24 +11,35 @@
 		width: 8px;
 		height: 90px;
 	}
-	#boxes {
+	
+	#redBox {
+		background-color: red;
 		margin: auto;
 		margin-top: 50px;
 		width: 300px;
 		height: 300px;
 	}
-	#redBox {
-		background-color: red;
-	}
 	#greenBox {
 		background-color: green;
+		margin: auto;
+		margin-top: 50px;
+		width: 300px;
+		height: 300px;
 	}
 	#blueBox {
 		background-color: blue;
+		margin: auto;
+		margin-top: 50px;
+		width: 300px;
+		height: 300px;
 		transition: opacity .2s ;
 	}
 	#purpleBox {
 		background-color: purple;
+		margin: auto;
+		margin-top: 50px;
+		width: 300px;
+		height: 300px;
 	}
 </style>
 </head>
