--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -48,7 +48,7 @@
 	<div id="options">
 		<button id="rotate" type="button" onclick="setRotate()">Rotate the red box</button>
 		<button id="shrink" type="button" onclick="setShrink()">Shrink the green box</button>
-		<button id="enlarge" type="button" onclick="setScaleEnlarge()">Make Blue Box Disappear</button>
+		<button id="disappear" type="button" onclick="setDisappear()">Make Blue Box Disappear</button>
 		<button id="translate" type="button" onclick="setTranslate()">Transport the purple box</button>
 
 	</div>
