--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -35,9 +35,10 @@
 	}
 	#blueBox {
 		background-color: blue;
-		float: right;
+		/*float: right;
+		margin-right: 25px;*/
+		float: left;
 		margin-left: 25px;
-		margin-right: 25px;
 		margin-top: 50px;
 		width: 200px;
 		height: 200px;
@@ -45,8 +46,10 @@
 	}
 	#purpleBox {
 		background-color: purple;
-		float: right;
-		margin-right: 25px;
+		/*float: right;
+		margin-right: 25px;*/
+		float: left;
+		margin-left: 25px;
 		margin-top: 50px;
 		width: 200px;
 		height: 200px;
