--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -10,6 +10,15 @@
 		background-color: brown;
 		width: 8px;
 		height: 90px;
+	}
+	#wand:hover{
+		animation-name: shakeWand;
+		animation-duration: 4s;
+		animation-iteration-count: 10;
+		animation-direction: alternate;
+		animation-timing-function: ease-out;
+		animation-fill-mode: forwards;
+		animation-delay: 2s;
 
 	}
 	#boxes {
