--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -12,6 +12,7 @@
 		height: 90px;
 	}
 	#wand:hover{
+		background-color: red;
 		animation-name: shakeWand;
 		animation-duration: 4s;
 		animation-iteration-count: 10;
