--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -62,6 +62,29 @@
 	}
 	/* Safari 4.0 - 8.0 */
 @-webkit-keyframes shakeWand {
+    0%   { transform: rotate(0deg); }
+    5%	 { transform: rotate(-1deg); }
+    10%  { transform: rotate(-2deg); }
+    15%  { transform: rotate(-3deg); }
+    20%  { transform: rotate(-4deg); }
+    25%  { transform: rotate(-5deg); }
+    30%  { transform: rotate(-4deg); }
+    35%  { transform: rotate(-3deg); }
+    40%  { transform: rotate(-2deg); }
+    45%  { transform: rotate(-1deg); }
+    50%  { transform: rotate(0deg); }
+    55%  { transform: rotate(1deg); }
+    60%  { transform: rotate(2deg); }
+    65%  { transform: rotate(3deg); }
+    70%  { transform: rotate(4deg); }
+    75%  { transform: rotate(5deg); }
+    80%  { transform: rotate(4deg); }
+    85%  { transform: rotate(3deg); }
+    90%  { transform: rotate(2deg); }
+    95%  { transform: rotate(1deg); }
+    100% { transform: rotate(0deg); }
+}
+/*@-webkit-keyframes shakeWand {
     0%   { transform: translate(1px, 1px) rotate(0deg); }
     10%  { transform: translate(-1px, -2px) rotate(-1deg); }
     20%  { transform: translate(-3px, 0px) rotate(1deg); }
@@ -73,9 +96,31 @@
     80%  { transform: translate(-1px, -1px) rotate(1deg); }
     90%  { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
+}*/
 @keyframes shakeWand {
+    0%   { transform: rotate(0deg); }
+    5%	 { transform: rotate(-1deg); }
+    10%  { transform: rotate(-2deg); }
+    15%  { transform: rotate(-3deg); }
+    20%  { transform: rotate(-4deg); }
+    25%  { transform: rotate(-5deg); }
+    30%  { transform: rotate(-4deg); }
+    35%  { transform: rotate(-3deg); }
+    40%  { transform: rotate(-2deg); }
+    45%  { transform: rotate(-1deg); }
+    50%  { transform: rotate(0deg); }
+    55%  { transform: rotate(1deg); }
+    60%  { transform: rotate(2deg); }
+    65%  { transform: rotate(3deg); }
+    70%  { transform: rotate(4deg); }
+    75%  { transform: rotate(5deg); }
+    80%  { transform: rotate(4deg); }
+    85%  { transform: rotate(3deg); }
+    90%  { transform: rotate(2deg); }
+    95%  { transform: rotate(1deg); }
+    100% { transform: rotate(0deg); }
+}
+/*@keyframes shakeWand {
     0%   { transform: translate(1px, 1px) rotate(0deg); }
     10%  { transform: translate(-1px, -2px) rotate(-1deg); }
     20%  { transform: translate(-3px, 0px) rotate(1deg); }
@@ -87,7 +132,7 @@
     80%  { transform: translate(-1px, -1px) rotate(1deg); }
     90%  { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
+}*/
 </style>
 </head>
 <body>
