--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -15,7 +15,7 @@
 		/*start shake animation and make animation last for .5 sec*/
 		animation: shakeWand 0.5s;
 		/*When finished, start again*/
-		animation-iteration-count: infinite;
+		animation-iteration-count: 5;
 
 	}
 	#boxes {
