--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -48,7 +48,7 @@
 		margin-top: 50px;
 		width: 200px;
 		height: 200px;
-		transition: opacity .2s ;
+		transition: opacity 1s ;
 	}
 	#purpleBox {
 		background-color: purple;
