--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<td>Submitted</td>
 				</tr>
 				<tr>
-					<td><a href="javaScriptEvents.html">JavaScript Events</a></td>
+					<td><a href="jsEvents.html">JavaScript Events</a></td>
 					<td></td>
 					<td></td>
 				</tr>
