--- a/jsEvents.html
+++ b/jsEvents.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>JavaScript</title>
-	<script src="assign05.js"></script>
-	<link type="text/css" rel="stylesheet" href="assign05.css"></link>
+	<script src="jsEvents.js"></script>
+	<link type="text/css" rel="stylesheet" href="jsEvents.css"></link>
 </head>
 <body onload="setFormFocus();">
 	<div id="wrapper">
