submit btn change

--- a/jsEvents.html
+++ b/jsEvents.html
@@ -97,7 +97,7 @@
 			
 			<div id="buttons">
 				<button type="reset" name="reset" onreset="setFormFocus()">Reset</button>
-				<button type="submit" name="submit" >Submit</button>
+				<button id="btnSubmit" type="submit" name="submit" >Submit</button>
 				
 			</div>
 		</form>
