--- a/css3TransitionAnimations.html
+++ b/css3TransitionAnimations.html
@@ -136,6 +136,9 @@
 </style>
 </head>
 <body>
+	<div><h1>Click the spell you would like to cast - then click the wand to see perform it! </h1>
+		<h3>As you keep your mouse over the wand, it will animate and begin to "shake" anticipating it's use for spell casting</h3>
+	</div>
 	<div id="options">
 		<button id="rotate" type="button" onclick="setRotate()">Rotate the red box</button>
 		<button id="shrink" type="button" onclick="setShrink()">Shrink the green box</button>
