--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,24 @@
 			</div>
 		</section>
 
-		</footer>
+		<!-- Section D-->
+		<section id="section-d" class="grid">
+			<div class="box">
+				<h2 class="content-title">Contact Us</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in purus magna. Aenean et nisl molestie ex eleifend mattis ut. </p>
+				<p>contact@shwebsolutions.test</p>
+			</div>
+			<div class="box">
+				<h2 class="content-title">About Our Company</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies blandit posuere. Praesent pellentesque sapien non neque malesuada, ut mattis justo accumsan. Integer tellus turpis, placerat imperdiet magna non, tempor. </p>
+			</div>
+		</section>
+	</main>
 
+	<!-- Footer-->
+	<footer id="main-footer" class="grid">
+		<div> SH Web Solutions</div>
+		<div>Project by <a href="hansen-m-sheri.github.io">Sheri Hansen</a>
+		</div>
 </body>
 </html>
