--- a/html5Tags.html
+++ b/html5Tags.html
@@ -4,7 +4,14 @@
 
 <h1>HTML5 Tags</h1>
 
+<h3>Video</h3>
+<video width="400" controls>
+	<source src="20181027_122253.mp4" type="video/mp4">
+	<source src="20181027_122253.ogg" type="video/mp4">
+	Your browser does not support HTML5 video.
+</video>
 
+<p>Video courtesy of my children </p>
 
 </body>
 </html>
