--- a/html5Tags.html
+++ b/html5Tags.html
@@ -5,9 +5,9 @@
 <h1>HTML5 Tags</h1>
 
 <h3>Video</h3>
-<video width="400" controls>
-	<source src="20181027_122253.mp4" type="video/mp4">
-	<source src="20181027_122253.ogg" type="video/mp4">
+<video width="400" height="600" controls>
+	<source src="20181027_122253.mp4#t=7" type="video/mp4">
+	<source src="20181027_122253.ogg#t=7" type="video/mp4">
 	Your browser does not support HTML5 video.
 </video>
 
