--- a/html5Tags.html
+++ b/html5Tags.html
@@ -13,5 +13,13 @@
 
 <p>Video courtesy of my children </p>
 
+<hr>
+<h3>Audio</h3>
+<audio controls>
+	<source src="4051 A Child's Prayer.mp3" type="audio/mp3">
+	<source src="4051 A Child's Prayer.ogg" type="audio/ogg">
+		Your browser does not support the audio element. 
+</audio>
+
 </body>
 </html>
