--- a/html5Tags.html
+++ b/html5Tags.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<title>HTML5 & Canvas</title>
+
+	<style type="text/css">
+	body {
+		margin: 0;
+	}
+	canvas {
+		border: 1px solid black;
+	}
+	</head>
 <body>
 
-<h1>HTML5 Tags</h1>
+<h1>HTML5 Tags Including Canvas</h1>
 
 <h3>Video</h3>
 <video width="400" height="600" controls>
@@ -14,12 +25,14 @@
 <p>Video courtesy of my children </p>
 
 <hr>
-<h3>Audio</h3>
+<h3>Audio Tabernacle Choir performing "A Child's Prayer" </h3>
 <audio controls>
 	<source src="4051 A Child's Prayer.mp3" type="audio/mp3">
 	<source src="4051 A Child's Prayer.ogg" type="audio/ogg">
 		Your browser does not support the audio element. 
 </audio>
-
+<hr>
+	<canvas></canvas>
+	<script src="canvas.js"></style>
 </body>
 </html>
