--- a/html5Tags.html
+++ b/html5Tags.html
@@ -4,13 +4,14 @@
 	<title>HTML5 & Canvas</title>
 
 	<style type="text/css">
-	body {
-		margin: 0;
-	}
-	canvas {
-		border: 1px solid black;
-	}
-	</head>
+		body {
+			margin: 0;
+		}
+		canvas {
+			border: 1px solid black;
+		}
+	</style>
+</head>
 <body>
 
 <h1>HTML5 Tags Including Canvas</h1>
