change video size

--- a/html5Tags.html
+++ b/html5Tags.html
@@ -17,7 +17,7 @@
 <h1>HTML5 Tags Including Canvas</h1>
 
 <h3>Video</h3>
-<video width="400" height="600" controls>
+<video width="400" height="400" controls>
 	<source src="20181027_122253.mp4#t=7" type="video/mp4">
 	<source src="20181027_122253.ogg#t=7" type="video/mp4">
 	Your browser does not support HTML5 video.
@@ -34,6 +34,6 @@
 </audio>
 <hr>
 	<canvas></canvas>
-	<script src="canvas.js"></style>
+	<script src="canvas.js"></script>
 </body>
 </html>
