--- a/css3Animations.html
+++ b/css3Animations.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
+<script src="animations.js"></script>
+<link rel="stylesheet" type="text/css" src="animations.css">
+
+<head>
+</head>
 <body>
 
 <h1>CSS3 Animations</h1>
 
-
+<ul class="drops">
+	<li></li>
+</ul>
 
 </body>
 </html>
