--- a/css3Transitions.html
+++ b/css3Transitions.html
@@ -1,9 +1,66 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style type="text/css">
+	.grid {
+		display: grid;
+		grid-template-columns: 4;
+		grid-template-rows: 2;
+	}
+	.box {
+		height: 100;
+		width:	100;
+	}
+	#box1 {
+		background: black;
+	}
+	#box2 {
+		background: red;
+	}
+	#box3 {
+		background: blue;
+	}
+	#box4 {
+		background: green;
+	}
+	#box5 {
+		background: purple;
+	}
+	#box6 {
+		background: yellow;
+	}
+	#box7 {
+		background: orange; 
+	}
+	#box8 {
+		background: brown; 
+	}
+</style>
+</head>
+
+<header >
+	<h1>CSS3 Transitions</h1>
+</header>
 <body>
-
-<h1>CSS3 Transitions</h1>
-
+	<div class="grid">
+		<div class="box" id="box1"> Fade In
+		</div>
+		<div class="box" id="box1"> Change Color
+		</div>
+		<div class="box" id="box1"> Grow 
+		</div>
+		<div class="box" id="box1"> Shrink
+		</div>
+		<div class="box" id="box1"> Rotate
+		</div>
+		<div class="box" id="box1"> Square to Circle
+		</div>
+		<div class="box" id="box1"> 3d shadow
+		</div>
+		<div class="box" id="box1"> Hover, click, touch? 
+		</div>
+		
+	</div>
 
 
 </body>
