--- a/css3Transitions.html
+++ b/css3Transitions.html
@@ -4,8 +4,8 @@
 <style type="text/css">
 	.grid {
 		display: grid;
-		grid-template-columns: 4;
-		grid-template-rows: 2;
+		grid-template-columns: auto auto auto auto;
+		grid-template-rows: auto auto;
 	}
 	.box {
 		height: 100;
