--- a/css3Transitions.html
+++ b/css3Transitions.html
@@ -4,8 +4,8 @@
 <style type="text/css">
 	.grid {
 		display: grid;
-		grid-template-columns: auto auto auto auto;
-		grid-template-rows: auto auto;
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(2, 1fr);
 	}
 	.box {
 		height: 100;
