--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td><a href="css3TransitionAnimations.html">CSS3 Transformations</a></td>
+					<td><a href="css3Transformations.html">CSS3 Transform</a></td>
 					<td></td>
 					<td></td>
 				</tr>
