--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -6,7 +6,7 @@
 		position: relative;
 		width: 250px;
 		height: 320px;
-		background-position: green;
+		
 	}
 	.theCard {
 		position: absolute;
@@ -14,7 +14,11 @@
 		height: 100%;
 		transform-style: preserve-3d;
 		transition: all 0.5 ease;
-		background: yellow;
+		
+	}
+
+	.theCard:hover {
+		transform: rotateY(180deg);
 	}
 
 	.theFront {
@@ -31,7 +35,7 @@
 		width: 100%;
 		height: 100%;
 		backface-visibility: hidden;
-		background: #ffc728;
+		background: #fafafa;
 		color: #333;
 		transform: rotateY(180deg);
 	}
@@ -43,8 +47,8 @@
 
 <div class="maincontainer">
 	<div class="theCard">
-		<div class="theFront"></div>
-		<div class="theBack"></div>
+		<div class="theFront">Front of Card</div>
+		<div class="theBack">Back of Card</div>
 	</div>
 </div>
 
