--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <style>
+ 	body {
+ 		font-family: Arial, sans-serif;
+ 		font-weight: 700;
+ 	}
 	.maincontainer {
 		position: relative;
 		width: 250px;
@@ -28,6 +32,8 @@
 		backface-visibility: hidden;
 		background: #ffc728;
 		color: #333;
+		text-align: center;
+		justify-content: center;
 	}
 
 	.theBack {
@@ -38,6 +44,8 @@
 		background: #fafafa;
 		color: #333;
 		transform: rotateY(180deg);
+		text-align: center;
+		justify-content: center;
 	}
 </style>
 </head>
