--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -5,6 +5,7 @@
  	body {
  		font-family: Arial, sans-serif;
  		font-weight: 700;
+ 		background-color: #0E6C8B;
  	}
 	.maincontainer {
 		position: relative;
