--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<td><p>Passed Profiency</p></td>
 				</tr>
 				<tr>
-					<td><a href="css3Transitions.html">CSS3 Transitions</a></td>
+					<td><a href="jsEvents.html">CSS3 Transitions</a></td>
 					<td></td>
 					<td></td>
 				</tr>
