--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 				</tr>
 				<tr>
 					<td><a href="jsEvents.html">CSS3 Transitions</a></td>
-					<td></td>
+					<td>November 8, 2018</td>
 					<td></td>
 				</tr>
 				<tr>
 					<td><a href="css3Transformations.html">CSS3 Transform</a></td>
-					<td></td>
+					<td>November 8, 2018</td>
 					<td></td>
 				</tr>
 				<tr>
@@ -60,8 +60,8 @@
 				</tr>
 				<tr>
 					<td><a href="css3TransitionAnimations.html">CSS3 and JavaScript</a></td>
-					<td></td>
-					<td></td>
+					<td>October 28, 2018</td>
+					<td>Passed Proficiency</td>
 				</tr>
 				<tr>
 					<td><a href="ajax.html">AJAX</a></td>
@@ -70,11 +70,12 @@
 				</tr>
 				<tr>
 					<td><a href="jsEvents.html">JavaScript Events</a></td>
-					<td></td>
-					<td></td>
+					<td>October 19, 2018</td>
+					<td>Passed Proficiency</td>
 				</tr>
 				<tr>
 					<td><a href="https://hansen-m-sheri.github.io/html5Tags.html">HTML5 Tags</a></td>
+					<td>November 7, 2018</td>
 					<td></td>
 				</tr>
 			</tbody>
