--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -4,7 +4,6 @@
 <style>
  	body {
  		font-family: Arial, sans-serif;
- 		font-weight: 700;
  		background-color: #0E6C8B;
  	}
 	.maincontainer {
@@ -18,7 +17,7 @@
 		width: 100%;
 		height: 100%;
 		transform-style: preserve-3d;
-		transition: all 0.5 ease;
+		transition: all 0.5s ease;
 		
 	}
 
@@ -34,7 +33,9 @@
 		background: #ffc728;
 		color: #333;
 		text-align: center;
-		justify-content: center;
+		border-radius: 20px;
+		font-size: 18px;
+		font-weight: bold;
 	}
 
 	.theBack {
@@ -47,6 +48,9 @@
 		transform: rotateY(180deg);
 		text-align: center;
 		justify-content: center;
+		border-radius: 20px;
+		font-size: 18px;
+		font-weight: bold;
 	}
 </style>
 </head>
