--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -7,7 +7,7 @@
  		background-color: #0E6C8B;
  	}
 	.maincontainer {
-		position: relative;
+		position: absolute;
 		width: 250px;
 		height: 320px;
 		
@@ -47,7 +47,6 @@
 		color: #333;
 		transform: rotateY(180deg);
 		text-align: center;
-		justify-content: center;
 		border-radius: 20px;
 		font-size: 18px;
 		font-weight: bold;
