--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -51,6 +51,18 @@
 		font-size: 18px;
 		font-weight: bold;
 	}
+
+	.theFront {
+		padding-top: 20%;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	.theBack {
+		padding-top: 20%;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 </style>
 </head>
 <body>
