--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -52,13 +52,13 @@
 		font-weight: bold;
 	}
 
-	.theFront {
+	.theFront h1, .theBack h1 {
 		padding-top: 20%;
 		padding-left: 20px;
 		padding-right: 20px;
 	}
 
-	.theBack {
+	.theFront p, .theBack p {
 		padding-top: 20%;
 		padding-left: 20px;
 		padding-right: 20px;
@@ -71,8 +71,10 @@
 
 <div class="maincontainer">
 	<div class="theCard">
-		<div class="theFront">Front of My Card</div>
-		<div class="theBack">Back of My Card</div>
+		<div class="theFront"><h1>Front of My Card</h1>
+			<p>What would you like on front of card? </p></div>
+		<div class="theBack"><h1>Back of My Card</h1>
+			<p>There is a lot of info and uses for flipping segments on websites! </p></div>
 	</div>
 </div>
 
