--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -10,14 +10,21 @@
 		position: absolute;
 		width: 250px;
 		height: 320px;
+		background: none;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 		
 	}
 	.theCard {
-		position: absolute;
+		position: relative;
+		top: 0;
+		left: 0;
 		width: 100%;
 		height: 100%;
+		border-radius: 20px;
 		transform-style: preserve-3d;
-		transition: all 0.5s ease;
+		transition: all 0.8s ease;
 		
 	}
 
@@ -27,9 +34,12 @@
 
 	.theFront {
 		position: absolute;
+		top: 0;
+		left: 0;
 		width: 100%;
 		height: 100%;
 		backface-visibility: hidden;
+		overflow: hidden;
 		background: #ffc728;
 		color: #333;
 		text-align: center;
