--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -7,6 +7,7 @@
  		background-color: #0E6C8B;
  	}
 	.maincontainer {
+		perspective: 1000px;
 		position: absolute;
 		width: 250px;
 		height: 320px;
