--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -70,7 +70,7 @@
 	}
 
 	.theFront p, .theBack p {
-		padding-top: 20%;
+		padding-top: 5%;
 		padding-left: 20px;
 		padding-right: 20px;
 	}
@@ -82,10 +82,10 @@
 
 <div class="maincontainer">
 	<div class="theCard">
-		<div class="theFront"><h1>Front of My Card</h1>
-			<p>What would you like on front of card? </p></div>
-		<div class="theBack"><h1>Back of My Card</h1>
-			<p>There is a lot of info and uses for flipping segments on websites! </p></div>
+		<div class="theFront"><h1>Joke</h1>
+			<p>Why did the traffic light turn red? </p></div>
+		<div class="theBack"><h1>Answer</h1>
+			<p>It was embarrassed to change in the street! Ha Ha </p></div>
 	</div>
 </div>
 
