--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -85,7 +85,7 @@
 		<div class="theFront"><h1>Joke</h1>
 			<p>Why did the traffic light turn red? </p></div>
 		<div class="theBack"><h1>Answer</h1>
-			<p>It was embarrassed to change in the street! <br> Ha Ha </p></div>
+			<p>It was embarrassed to change in the street </p></div>
 	</div>
 </div>
 
